crates/aven-check/tests/fixtures/check/invalid/literal-mismatch.av
asInt : Int = "hi"
asText : Text = 42
asSig : Text
asSig = 42
